--- a/FRONT-IA-PROYECT/package.json
+++ b/FRONT-IA-PROYECT/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
+    "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.1.1",
     "@mui/x-data-grid": "^8.7.0",
     "@react-router/node": "^7.5.3",
